--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,15 +10,53 @@
 
   <h1>Cartelera</h1>
   <hr>
-<div class="row">
-  <div class="col-sm-6">
-    asd
-  </div>
-  <div class="col-sm-6">
-asd
-  </div>
-</div>
 
+  <div class="row">
+
+    <div class="col-sm-6">
+
+      <div class="row">
+        <div class="col-md-12 div-pic-1"
+            [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 div-pic-2"
+              [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">>
+        </div>
+        <div class="col-sm-6 div-pic-2"
+              [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="col-sm-6">
+
+
+      <div class="row">
+        <div class="col-sm-6 div-pic-2"
+              [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">>
+        </div>
+        <div class="col-sm-6 div-pic-2"
+              [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 div-pic-1"
+        [ngStyle]="{'background-image': 'url( http://image.tmdb.org/t/p/w500/jHcT6GBw0PVZUQ6518Lh6wJQEPN.jpg)'}">
+      </div>
+    </div>
+
+    </div>
+
+
+
+
+
+  </div>
 
 
 </div>
